--- a/it_modernization/raw_data/details.yaml
+++ b/it_modernization/raw_data/details.yaml
@@ -13,7 +13,8 @@
   start_date: 2025-03-05
   end_date: 2025-03-06
   max_people: 1
-  comment: for "Employee 7"
+  named_aliases:
+  - SSA-7
   reimbursed: true
   reimbursement_amount: "$71,000 per quarter"
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
@@ -27,7 +28,8 @@
   end_date: 2026-02-18
   max_people: 1
   reimbursed: true
-  comment: For "Employee 2"
+  named_aliases:
+  - SSA-2
   reimbursement_amount: "Up to $120,579"
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
   file: 20250306-nasa-ssa-employee-2.pdf
@@ -40,6 +42,8 @@
   end_date: 2025-02-26
   max_people: 1
   reimbursed: false
+  named_aliases:
+  - SSA-8
   comment: "For a SGE, so no payment needed"
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
   file: 20250226-opm-ssa-employee-8.pdf
@@ -51,6 +55,8 @@
   start_date: 2025-02-18
   max_people: 1
   reimbursed: false
+  named_aliases:
+  - SSA-10
   comment: "For a SGE, so no payment needed"
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
   file: 20250218-gsa-ssa-employee-10.pdf
@@ -63,6 +69,8 @@
   end_date: 2026-02-18
   max_people: 1
   reimbursed: true
+  named_aliases:
+  - SSA-3
   reimbursement_amount: "$71,000 per quarter"
   source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.577321/gov.uscourts.mdd.577321.121.3.pdf
   file: 20250218-dol-ssa-employee-3.pdf
@@ -91,7 +99,7 @@
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   file: 20250212-doge-education-all.pdf
 
-- id: 20250212-opm-education-gse
+- id: 20250212-opm-education-ed-1
   from: OPM
   to: Education
   signed_date: 2025-02-12
@@ -99,9 +107,11 @@
   end_date: 2026-02-12
   max_people: 1
   reimbursed: false
+  named_aliases:
+  - ED-1
   comment: This is for a SGE position so it is not reimbursed and for a maximum of 135 days from start of SGE term
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-  file: 20250212-opm-education-gse.pdf
+  file: 20250212-opm-education-ed-1.pdf
 
 - id: 20250212-ssa-opm-education-sge
   from: SSA
@@ -110,20 +120,24 @@
   start_date: 2025-02-12
   max_people: 1
   reimbursed: false
+  named_aliases:
+  - OPM-3
   comment: An unusual 3-way MOU that lets an undisclosed SSA employee also do work as an SGE for OPM and the Dept. of Education
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
   file: 20250212-ssa-opm-education-sge.pdf
 
-- id: 20250212-gsa-education-sge
+- id: 20250212-gsa-education-ed-3
   from: SSA
   to: Education
   signed_date: 2025-02-03
   start_date: 2025-02-12
   max_people: 1
   reimbursed: false
+  named_aliases:
+  - ED-3
   comment: This is for a SGE position so it is not reimbursed and for a maximum of 135 days from start of SGE term
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277216/gov.uscourts.dcd.277216.32.1.pdf
-  file: 20250212-gsa-education-sge.pdf
+  file: 20250212-gsa-education-ed-3.pdf
 
 - id: 20250305-gsa-hhs-no-record
   from: GSA
@@ -142,7 +156,8 @@
 - id: 20250312-gsa-usps-alex-simonpour
   from: GSA
   to: USPS
-  comment: Names Alex Simonpour explicitly (name not redacted)
+  named:
+  - Alexander Simonpour
   source: https://about.usps.com/who/legal/foia/documents/mou-alex-simonpour-executed-redacted.pdf
   reimbursed: false
   start_date: 2025-03-07
@@ -156,6 +171,3 @@
   comment: No document. This is for the detail of DOGE staff to CFPB as described in a court filing
   source: https://storage.courtlistener.com/recap/gov.uscourts.dcd.277150/gov.uscourts.dcd.277150.73.2.pdf
   start_date: 2025-02-06
-
-- id:
-  source: https://storage.courtlistener.com/recap/gov.uscourts.mdd.576070/gov.uscourts.mdd.576070.51.1.pdf
