--- a/it_modernization/raw_data/aliases.yaml
+++ b/it_modernization/raw_data/aliases.yaml
@@ -23,7 +23,7 @@
   agency: Education
   evidence:
   - This person appears in a detail from OPM to SSA, but also a detail from SSA back to OPM and Education
-  - This is the same person as ED-1 because there is a detail document that appears with two diff redacted names
+  - This is the same person as OPM-3 because there is a detail document that appears with two diff redacted names
 
 - id: ED-2
   agency: Education
